--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+
 }
 
 android {
@@ -31,6 +34,9 @@ android {
     }
 }
 
+def retrofitVersion='2.3.0'
+def mockitoVersion='2.11.0'
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -40,4 +46,32 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //Testing
+    testDebugImplementation "org.mockito:mockito-inline:$mockitoVersion"
+
+    //Viewmodel
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
+
+    //    Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+
+
+    //RXJava2
+    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.2'
+    implementation group: 'io.reactivex.rxjava2', name: 'rxandroid', version: '2.0.2'
+
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+
+    //Dagger2
+    implementation "com.google.dagger:dagger:2.24"
+
+    kapt "com.google.dagger:dagger-compiler:2.24"
+    kapt "com.google.dagger:dagger-android-processor:2.24"
+
 }
