--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,9 @@ dependencies {
 
     //Dagger2
     implementation "com.google.dagger:dagger:2.24"
-
     kapt "com.google.dagger:dagger-compiler:2.24"
     kapt "com.google.dagger:dagger-android-processor:2.24"
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
 }
