UI changes and theme changes for School details screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.SchoolDetailsActivity"/>
+        <activity android:name=".view.SchoolDetailsActivity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
