--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.24"
     kapt "com.google.dagger:dagger-android-processor:2.24"
 
+    // Logging requests
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
 }
